ok time to stop fiddling. i still need to space out the last 2 scenes so that there isnt so much text altogher but i can refine this later if theres time. basic text tape added. new spacer div to keep things from being too close together, as well.

--- a/client/public/rehersals/portal-404s/style/rez_hijack3.css
+++ b/client/public/rehersals/portal-404s/style/rez_hijack3.css
@@ -94,7 +94,7 @@ input[type=checkbox]:checked+label:before {
 
 .container-big {
   position: relative;
-  max-width: 900px;
+  max-width: 70%;
   margin: 0 auto;
   padding: 5%;
 }
